# pyvers

./: .gitignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: RELEASE_AGENT_PROMPT.md
.github/workflows/: build-wheels.yml  release.yml  tests.yml
dyndispatch/: __init__.py
examples/: gym_versioning.py  numpy_jax.py  numpy_versioning.py  pytorch_versioning.py  scipy_cupy_versioning.py
pyvers/: __init__.py  backends.py  implement_for.py
tests/: __init__.py  _utils_internal.py  test_backends.py  test_implement_for.py  test_numpy_jax_example.py  test_version.py
